--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ footer-links:
   email: contactus@tekrx.ca
   facebook: https://www.facebook.com/TekRxSolutions/
   flickr:
-  github: 
+  github:
   instagram:
   linkedin: https://www.linkedin.com/company/tekrx/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -77,6 +77,9 @@ gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-redirect-from
+  - amp-jekyll
+
+ampdir: /_posts/
 
 # Exclude these files from your production _site
 exclude:
