--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://raw.githubusercontent.com/TekRx/tekrx.github.io/master/images/Te
 footer-links:
   dribbble:
   email: contactus@tekrx.ca
-  facebook: https://www.facebook.com/TekRxSolutions/
+  facebook: TekRxSolutions
   flickr:
   github:
   instagram:
